src/objects/SocialNetwork__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Social Network</relationshipLabel>
        <relationshipName>Social_Network</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Social Network (Navigation)</relationshipLabel>
        <relationshipName>Social_Network1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Social Network</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SocialNetwork Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Network</pluralLabel>
    <recordTypes>
        <fullName>Facebook</fullName>
        <active>true</active>
        <label>Facebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instagram</fullName>
        <active>true</active>
        <label>Instagram</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pinterest</fullName>
        <active>true</active>
        <label>Pinterest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Twitter</fullName>
        <active>true</active>
        <label>Twitter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>